<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Between The Posts</string>
    <string name="action_settings">Settings</string>
    <string name="home_team_name_EditText">Enter Home Team</string>
    <string name="away_team_name_EditText">Enter Away Team</string>
    <string name="home_goals_tv">0</string>
    <string name="home_points_tv">0</string>
    <string name="away_goals_tv">0</string>
    <string name="away_points_tv">0</string>
    <string name="home_team_goal_add_button">Goal</string>
    <string name="away_team_goal_add_button">Goal</string>
    <string name="home_team_point_add_button">Point</string>
    <string name="away_team_point_add_button">Point</string>
    <string name="home_team_goal_minus_button">-</string>
    <string name="away_team_goal_minus_button">-</string>
    <string name="home_team_point_minus_button">-</string>
    <string name="away_team_point_minus_button">-</string>
    <string name="update_preview_button">Preview</string>
    <string name="preview_editText">Summary.......</string>
    <string name="create_connection">Connect</string>
    <string name="update_twitter_button">Share</string>
    <string name="about">About</string>
    <string name="title_activity_display_about">App Info</string>

</resources>
