<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/Butts_Park">

    <EditText
        android:id="@+id/home_team_name_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/home_team_name_EditText"
        android:textColorHint="#0C0CF5"/>

    <EditText
        android:id="@+id/away_team_name_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/away_team_name_EditText"
        android:textColorHint="#0C0CF5"/>

    <TextView
        android:id="@+id/home_goals_tv"
        android:text="@string/home_goals_tv"
        android:textSize="40sp"
        android:textColor="#0C0CF5"
        android:gravity="center"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/home_team_name_EditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/home_points_tv"
        android:text="@string/home_points_tv"
        android:textSize="40sp"
        android:textColor="#0C0CF5"
        android:gravity="center"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/home_goals_tv"
        android:layout_alignRight="@+id/home_team_name_EditText"
        android:layout_alignEnd="@+id/home_team_name_EditText" />

    <TextView
        android:id="@+id/away_goals_tv"
        android:text="@string/away_goals_tv"
        android:textSize="40sp"
        android:textColor="#0C0CF5"
        android:gravity="center"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/home_points_tv"
        android:layout_alignLeft="@+id/away_team_name_EditText"
        android:layout_alignStart="@+id/away_team_name_EditText" />

    <TextView
        android:id="@+id/away_points_tv"
        android:text="@string/away_points_tv"
        android:textSize="40sp"
        android:textColor="#0C0CF5"
        android:gravity="center"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/away_goals_tv"
        android:layout_alignRight="@+id/away_team_goal_add_button"
        android:layout_alignEnd="@+id/away_team_goal_add_button" />

    <Button
        android:id="@+id/home_team_goal_add_button"
        android:text="@string/home_team_goal_add_button"
        android:textColor="#E8E81A"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape2"
        android:layout_above="@+id/home_team_point_add_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/away_team_goal_add_button"
        android:text="@string/away_team_goal_add_button"
        android:textColor="#E8E81A"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/home_team_goal_add_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_shape2"/>

    <Button
        android:id="@+id/home_team_point_add_button"
        android:text="@string/home_team_point_add_button"
        android:textColor="#E8E81A"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/away_team_point_add_button"
        android:text="@string/away_team_point_add_button"
        android:textColor="#E8E81A"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/home_team_point_add_button"
        android:layout_alignRight="@+id/away_team_goal_add_button"
        android:layout_alignEnd="@+id/away_team_goal_add_button"
        android:background="@drawable/button_shape2"/>

    <Button
        android:id="@+id/home_team_goal_minus_button"
        android:text="@string/home_team_goal_minus_button"
        android:textColor="#E8E81A"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_team_point_add_button"
        android:layout_alignRight="@+id/home_team_name_EditText"
        android:layout_alignEnd="@+id/home_team_name_EditText"
        android:layout_marginRight="-5dp"
        android:background="@drawable/button_shape2"/>

    <Button
        android:id="@+id/away_team_goal_minus_button"
        android:text="@string/away_team_goal_minus_button"
        android:textColor="#E8E81A"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/away_team_goal_add_button"
        android:layout_toLeftOf="@+id/away_team_goal_add_button"
        android:layout_toStartOf="@+id/away_team_goal_add_button"
        android:layout_marginRight="5dp"
        android:background="@drawable/button_shape2"/>

    <Button
        android:id="@+id/home_team_point_minus_button"
        android:text="@string/home_team_point_minus_button"
        android:textColor="#E8E81A"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/home_team_point_add_button"
        android:layout_alignLeft="@+id/home_team_goal_minus_button"
        android:layout_alignStart="@+id/home_team_goal_minus_button"
        android:background="@drawable/button_shape2"/>

    <Button
        android:id="@+id/away_team_point_minus_button"
        android:text="@string/away_team_point_minus_button"
        android:textColor="#E8E81A"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/away_team_point_add_button"
        android:layout_alignLeft="@+id/away_team_goal_minus_button"
        android:layout_alignStart="@+id/away_team_goal_minus_button"
        android:background="@drawable/button_shape2"/>

    <Button
        android:id="@+id/update_preview_button"
        android:text="@string/update_preview_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/home_team_point_add_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/preview_editText"
        android:text="@string/preview_editText"
        android:textSize="30sp"
        android:textColor="#0C0CF5"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/about"
        android:layout_alignRight="@+id/away_team_point_add_button"
        android:layout_alignEnd="@+id/away_team_point_add_button" />

    <Button
        android:id="@+id/create_connection"
        android:text="@string/create_connection"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:layout_alignTop="@+id/update_preview_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/tweet"
        android:text="@string/update_twitter_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:layout_alignTop="@+id/create_connection"
        android:layout_toRightOf="@+id/away_team_point_minus_button"
        android:layout_toEndOf="@+id/away_team_point_minus_button" />

    <Button
        android:id="@+id/about"
        android:text="@string/about"
        android:background="@drawable/button_shape3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="displayAbout"/>


</RelativeLayout>
